crates/rongroi-collectors/tests/snapshots/report_snapshot__session_not_known_statements.snap
---
source: crates/rongroi-collectors/tests/report_snapshot.rs
expression: "sessions_of(\"session-not-known\")"
---
[
  {
    "kind": "session",
    "edition": "legacy",
    "session": "not_known",
    "prefetch": "not_admin",
    "bam": "not_admin"
  }
]
